--- a/xingchallenge/app/src/main/res/layout/activity_main.xml
+++ b/xingchallenge/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
-<fragment android:id="@+id/fragment"
-          android:name="uk.me.jeffsutton.xingchallenge.fragment.MainActivityFragment"
-          xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          tools:layout="@layout/fragment_main"/>
+<fragment
+    android:id="@+id/fragment"
+    android:name="uk.me.jeffsutton.xingchallenge.fragment.MainActivityFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
